[package]
name = "fuid"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A UUID-compatible identifier in a friendly base-62 format."
repository = "https://github.com/arciem/fuid"
readme = "README.md"
keywords = ["uuid", "base62"]
categories = ["data-structures", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.2", features = ["v4"] }
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"
