[package]
name = "fuid"
version = "1.1.0"
edition = "2021"
license = "MIT"
description = "A UUID-compatible identifier in a friendly base-62 format."
repository = "https://github.com/arciem/fuid"
readme = "README.md"
keywords = ["uuid", "base62"]
categories = ["data-structures", "encoding"]

[dependencies]
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", optional = true }

[dev-dependencies]
serde_json = "1"
